Updated the selectors and fixed some spacing inconsistencies

--- a/src/cf-forms/src/organisms/form.less
+++ b/src/cf-forms/src/organisms/form.less
@@ -18,48 +18,47 @@
     // Input with button
     //
 
-    &__input-w-btn {      
-      .respond-to-min( 480px, {
-          .grid_nested-col-group();
-      } );
+    &__input-w-btn {
+        .respond-to-min( 480px, {
+            .grid_nested-col-group();
+        } );
 
-      &_input-container {
-          margin-bottom: unit( 15px / @base-font-size-px, em );
-          .respond-to-min( 480px, {
-              .grid_column(9);
-              border-right-width: 0;
-          } );
-          .respond-to-min( 960px, {
-              .grid_column(10);
-              border-right-width: 0;
-          } );
+        &_input-container {
+            margin-bottom: unit( 15px / @base-font-size-px, em );
 
-          input {
-              box-sizing: border-box;
-              width: 100%;
-          }
-      }
+            .respond-to-min( 480px, {
+                .grid_column( 9 );
 
-      &_btn-container {
-          margin-bottom: unit( 15px / @base-font-size-px, em );
+                border-right-width: 0;
+            } );
 
-          .respond-to-min( 480px, {
-              .grid_column(3);
-          } );
-          .respond-to-min( 960px, {
-              .grid_column(2);
-          } );
+            .respond-to-min( 960px, {
+                .grid_column( 10 );
 
-          .a-btn {
-              box-sizing: border-box;
-              width: 100%;
-          }
+                border-right-width: 0;
+            } );
 
-          .a-btn__super {
-              padding-left: unit( 15px / @super-btn-font-size, em );
-              padding-right: unit( 15px / @super-btn-font-size, em );
-          }
-      }
+            .a-text-input {
+                box-sizing: border-box;
+                width: 100%;
+            }
+        }
+
+        &_btn-container {
+            margin-bottom: unit( 15px / @base-font-size-px, em );
+
+            .respond-to-min( 480px, {
+                .grid_column( 3 );
+            } );
+
+            .respond-to-min( 960px, {
+                .grid_column( 2 );
+            } );
+
+            .a-btn {
+                box-sizing: border-box;
+                width: 100%;
+            }
+        }
     }
-
 }
